@@ -2179,3 +2179,8 @@ Added get_opening argument to u.find_closing_bracket() function
 to also return the position of the opening bracket when requested.
 Updated and added u.find_closing_bracket() tests.
 
+*****
+
+Tweaked bm.read_file() to ignore @comment entries like BibTeX does.
+Added respective tests.
+
